--- a/custom.css
+++ b/custom.css
@@ -1,9 +1,38 @@
+
 body {
-  /*background-color: lightblue;*/
-  padding-top: 0;
+    font: 16px Montserrat, sans-serif;
+    line-height: 1.8;
+    color: black;
+    margin: 0px !important;
+    padding-top: 0;
+}
+  
+.margin {margin-bottom: 15px;}
+
+.container {
+  padding: 10px;
+  /*padding-bottom: 70px;*/
 }
 
-/*h3 {
-  color: navy !important;
-  margin-left: 20px;
-}*/
+.navbar {
+  padding-top: 0px;
+}
+
+.topnav {
+  overflow: hidden;
+  background-color: #eee;
+}
+
+.topnav a {
+  float: left;
+  color: #333;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 20px;
+}
+
+.topnav a:hover {
+  background-color: #ddd;
+  color: black;
+}
